--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@ x64
 **/.env
 **/.obj
 *.spv
+*.vcxproj
+*.vcxproj.*
 VulkanStudy/sandbox/**
 *.a
 textures_
 models/viking_room.obj
 imgui.ini
 .env.cmake
+VulkanStudy/VulkanStudy
