--- a/VulkanStudy/VulkanStudy.vcxproj
+++ b/VulkanStudy/VulkanStudy.vcxproj
@@ -138,7 +138,7 @@
     <ClCompile Include="src\first_app.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\AoraPipeline.cpp" />
-    <ClCompile Include="src\AoraSwap_hain.cpp" />
+    <ClCompile Include="src\AoraSwapchain.cpp" />
     <ClCompile Include="src\AoraWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
