--- a/VulkanStudy/VulkanStudy.vcxproj.filters
+++ b/VulkanStudy/VulkanStudy.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\SimpleRenderSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\AoraCamera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AoraWindow.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\SimpleRenderSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\AoraCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
