--- a/VulkanStudy/VulkanStudy.vcxproj.filters
+++ b/VulkanStudy/VulkanStudy.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\AoraCamera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\KeyboardMovementController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AoraWindow.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\AoraCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\KeyboardMovementController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
