add: Uniform Buffer

--- a/VulkanStudy/VulkanStudy.vcxproj
+++ b/VulkanStudy/VulkanStudy.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\AoraBuffer.cpp" />
     <ClCompile Include="src\KeyboardMovementController.cpp" />
     <ClCompile Include="src\AoraCamera.cpp" />
     <ClCompile Include="src\AoraDevice.cpp" />
@@ -149,6 +150,8 @@
     <ClCompile Include="src\SimpleRenderSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AoraBuffer.h" />
+    <ClInclude Include="src\AoraFrameInfo.h" />
     <ClInclude Include="src\AoraUtils.h" />
     <ClInclude Include="src\KeyboardMovementController.h" />
     <ClInclude Include="src\AoraCamera.h" />
