--- a/VulkanStudy/VulkanStudy.vcxproj.filters
+++ b/VulkanStudy/VulkanStudy.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\KeyboardMovementController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\AoraBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AoraWindow.h">
@@ -90,6 +93,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\AoraUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\AoraBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\AoraFrameInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
